# fold_db_core

./: Cargo.toml  LICENSE  README.md
src/: api.rs  lib.rs
src/access/: capability.rs  mod.rs  payment.rs  trust.rs
src/audit/: mod.rs
src/engine/: mod.rs
src/registry/: mod.rs
src/store/: mod.rs
src/transform/: expr.rs  mod.rs
src/types/: context.rs  field.rs  fold.rs  mod.rs  security_label.rs  value.rs
tests/: api_test.rs  audit_test.rs  capability_test.rs  expr_transform_test.rs  heart_rate_average_test.rs  heart_rate_test.rs  integration_test.rs  monadic_semantics_test.rs  multi_week_hr_test.rs  paper_example_test.rs  payment_gate_test.rs  registry_test.rs  security_label_test.rs  shared_data_test.rs  store_test.rs  transform_test.rs  trust_distance_test.rs
