[package]
name = "fold_db_core"
version = "0.1.0"
edition = "2024"
description = "Core library implementing the Fold DB model: policy-enforcing interfaces over stored data"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
