[package]
name = "fold_db_core"
version = "0.1.0"
edition = "2024"
description = "Core library implementing the Fold DB model: policy-enforcing interfaces over stored data"
license = "MIT"
repository = "https://github.com/shiba4life/fold_db_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
